[package]
name = "fpzip-sys"
version = "0.1.3"
authors = ["jvo203 <chris.zapart@nao.ac.jp>"]
edition = "2018"
description = "Raw Rust bindings to FPZIP (https://github.com/LLNL/fpzip)."
repository = "https://github.com/jvo203/fpzip-sys"
readme = "README.md"
license = "MIT"
categories = ["compression", "external-ffi-bindings", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.54"
cmake = "0.1"
